Checkpoint save: Admin dashboard project completed - Minor UI tweaks (font size) - Minor UI tweaks - Project text size edit to prevent overflow - Set repeat with auto-fit value to project grid - Set default theme (dark). - UI design completed - Added extra dark theme. - currently bug hunting - Next step: restart with TOP lessons.

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ body {
 .project-grid { 
     width: min(100%);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr) );
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr) );
     grid-auto-rows: repeat(auto-fit); 
     gap: 2rem;
 }
